# BU_Superagent

./: .coverage  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  cli.py  pyproject.toml  pytest.ini  results.json  sitecustomize.py
.github/: copilot-instructions.md
.github/instructions/: standards.instructions.md
.logs/: chunking_stats_1758608306.jsonl  chunking_stats_1758608469.jsonl
data/gold/: gold_qa.jsonl  gold_qa_eval.jsonl
scripts/: __init__.py  assert_eval_100.py  eval_chunking.py  eval_citations.py  eval_embeddings.py  eval_embeddings_rerank.py  gold_eval.py  ingest_kb.py  prefetch_models.py  preview_chunking.py  preview_pdf_metadata.py  query_kb.py  verify_chunking.py
src/: __init__.py  config.py
src/api/: services.py
src/application/: __init__.py
src/bu_kb/: cli.py  config.py  embeddings.py  exceptions.py  logging_setup.py  query.py  retrieval.py  vectorstore.py
src/config/: __init__.py  composition_sam.py  configure_app.py  llm.py  providers.py  (+1 more)
tests/: test_answer_with_citations.py  test_bge_reranker.py  test_build_embeddings_device.py  test_category_infer.py  test_chroma_query.py  test_citation_validator.py  test_cli_integration.py  test_collection_namespacing.py  test_dedup_ingest_hash.py  test_dedup_query_cosine.py  test_device_resolve.py  test_e5_wrapper_behavior.py  test_embeddings_factory.py  test_eval_embeddings.py  test_llm_providers.py  test_pdf_metadata_mapping.py  test_pdf_smart_loader_integration.py  test_sentence_chunker.py  test_smoke_ingest.py  test_splitter_factory.py  test_toc_crosspage_merge.py  test_toc_section_injection.py  test_use_cases.py
tools/: peek_chunks.py  sanity_embeddings.py
(+75 files in other folders)
