[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bu-kb"
version = "0.1.0"
description = "BU knowledge base: modular ingestion (PDF → chunks → embeddings → Chroma)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langchain==0.3.27",
  "langchain-community==0.3.29",
  "langchain-text-splitters==0.3.11",
  "langchain-huggingface==0.3.1",
  "langchain-chroma==0.2.6",
  "chromadb==1.0.21",
  "sentence-transformers==3.0.1",
  "pymupdf==1.24.9",
  "pydantic==2.8.2",
  "pydantic-settings==2.10.1",
  "python-dotenv==1.0.1",
  "typer==0.12.4",
  "click==8.1.7",
  "rich==13.7.1",
  "tqdm==4.66.5",
]
[project.optional-dependencies]
dev = [
  "pytest==8.3.2",
  "pytest-cov==5.0.0",
  "mypy==1.11.2",
  "ruff==0.6.9",
  "black==24.8.0",
  "pre-commit==3.8.0",
  "types-tqdm==4.66.0.20240417",
]
nlp = [
  # Optional: sentence segmentation (used if available)
  "syntok",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "B", "UP"]  # pyflakes/pycodestyle/imports/bugbear/pyupgrade
ignore = ["E501"]  # black controls line length
fix = true

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
strict_optional = true
pretty = true
show_error_codes = true

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --maxfail=1 --cov=src --cov-report=term-missing"
testpaths = ["tests"]
